# hotel-boost

./: .coveragerc  .dockerignore  .env.example  .gitignore  CACHE_CLEARING_INSTRUCTIONS.md  Dockerfile  Dockerfile.prod  Makefile  README-deployment.md  README.md  TASK_13_IMPLEMENTATION_SUMMARY.md  alembic.ini  app_fixed.py  app_full.py  app_log.txt  app_minimal.py  augment.md  celery_worker.py  check_cache_status.py  check_real_layout.py  clean_server.py  clear_all_caches.py  compare_sections.py  debug_dashboard_vs_ai.py  debug_layout.py  docker-compose.prod.yml  docker-compose.yml  double_verification_test.py  final_css_fix.py  final_features_check.py  final_fix_test.py  final_layout_test.py  final_test_ai_config.py  final_validation_test.py  find_space_culprit.py  fix_admin_auth_awaits.py  fix_admin_auth_complete.py  fix_admin_auth_validators.py  fix_all_async_issues.py  fix_hotels_endpoints.py  (+63 more)
.taskmaster/: execution_report.md  state.json
alembic/: env.py
app/: __init__.py  database.py  main.py
docs/: DEEPSEEK_INTEGRATION.md  HOTEL_MANAGEMENT_IMPLEMENTATION.md  SENTIMENT_MONITORING.md  database.md  deployment.md  green_api_integration.md  operation_manual.md  operations.md  performance_optimization.md  reliability.md  setup_guide.md  testing_results.md  troubleshooting.md  troubleshooting_guide.md  user_tutorial.md
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  network-policies.yaml  persistent-volumes.yaml  secrets.yaml  service.yaml
logs/: .gitkeep
monitoring/: alerts.yml  grafana-dashboard.json  prometheus.yml
playwright-report/: index.html
scripts/: add_test_hotel.py  backup.py  create_hotel_direct.py  create_performance_indexes.sql  db_maintenance.py  deploy.sh  health_check.py  health_check_comprehensive.py  init_sqlite_db.py  minimal_hotel_test.py  requirements-prod.txt  restore.py  rollback.sh  run_migrations.py  run_tests.py  setup_database_roles.sql  setup_row_level_security.sql  simple_hotel_creation.py  simple_test_hotel.py  smoke-tests.sh  test_db_connection.py  test_hotel_creation.py  update_dashboard_version.py
temp_server/: isolated_server.py
test-results/: .last-run.json
tests/: __init__.py  conftest.py  run_conversation_tests.py  test_conversation_integration.py  test_conversation_performance.py  test_conversation_state_machine.py  test_database_integration.py  test_database_performance.py  test_escalation_service.py  test_hotel_management_suite.py  test_main.py  (+5 more)
(+384 files in other folders)
